--- a/index.html
+++ b/index.html
@@ -16,38 +16,38 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="card" id="card-1">
-      <div class="content">
+  <div class="card-container">
+    <article class="card" id="sedan-card">
+      <section class="content">
         <img src="images/icon-sedans.svg" alt="sedans icon">
-        <h1>SEDANS</h1>
-        <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your
-          next road trip.</p>
-      </div>
-      <button id="button-1">Learn More</button>
-    </div>
+        <h2 class="card-heading">SEDANS</h2>
+        <p class="card-description">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the
+          city or on your next road trip.</p>
+      </section>
+      <button class="card-button" id="sedan-button">Learn More</button>
+    </article>
 
-    <div class="card" id="card-2">
-
-      <div class="content">
+    <article class="card" id="suvs-card">
+      <section class="content">
         <img src="images/icon-suvs.svg" alt="suv icon">
-        <h1>SUVS</h1>
-        <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and
-          off-road adventures.</p>
-      </div>
-      <button id="button-2">Learn More</button>
-    </div>
+        <h2 class="card-heading">SUVS</h2>
+        <p class="card-description">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family
+          vacation and off-road adventures.</p>
+      </section>
+      <button class="card-button" id="suvs-button">Learn More</button>
+    </article>
 
-    <div class="card" id="card-3">
-      <div class="content">
+    <article class="card" id="luxury-card">
+      <section class="content">
         <img src="images/icon-luxury.svg" alt="luxury icon">
-        <h1>LUXURY</h1>
-        <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and
-          arrive in style.</p>
-      </div>
-      <button id="button-3">Learn More</button>
-    </div>
+        <h2 class="card-heading">LUXURY</h2>
+        <p class="card-description">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a
+          luxury rental and arrive in style.</p>
+      </section>
+      <button class="card-button" id="luxury-button">Learn More</button>
+    </article>
   </div>
+
 </body>
 
 </html>
